--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <html>
   <head>
     <title> Hello world </title>
+    <style>
+      body {
+        background-color: cyan;
+      }
+    </style>
   </head>
   <body>
     <h1> Hello world! </h1>
+    <h1> WATCH SMUDGE'S ADVENTURES </h1>
+    <a href="https://lilpetes.github.io/Lil-Petey-s-Films-/index.html" target="_self"> HERE </a>
   </body>
 </html>
