--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <body>
     <h1> Hello world! </h1>
     <h1> WATCH SMUDGE'S ADVENTURES </h1>
-    <a href="https://lilpetes.github.io/Lil-Petey-s-Films-/index.html" target="_self"> HERE </a>
+    <a href="https://lilpetes.github.io/Lil-Petey-s-Films-/index.html" target="_blank"> HERE </a>
   </body>
 </html>
