--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1> Hello world! </h1>
     <h1> WATCH SMUDGE'S ADVENTURES </h1>
     <a href="https://lilpetes.github.io/Lil-Petey-s-Films-/index.html" target="_blank"> HERE </a>
+    <p> pls don't block this, it is-a harmless site </p>
   </body>
 </html>
