--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> Hello world </title>
+    <title> My website main page </title>
     <style>
       body {
         background-color: cyan;
@@ -9,8 +9,9 @@
   </head>
   <body>
     <h1> Hello world! </h1>
-    <h1> WATCH SMUDGE'S ADVENTURES </h1>
+    <p> This is the main page for my website, also my friend added the text below this xd </p>
+    <p> WATCH SMUDGE'S ADVENTURES </p>
     <a href="https://lilpetes.github.io/Lil-Petey-s-Films-/index.html" target="_blank"> HERE </a>
-    <p> pls don't block this, it is-a harmless site </p>
+    <p> Have a nice day <3 </p>
   </body>
 </html>
