--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <a href="https://lilpetes.github.io/Lil-Petey-s-Films-/index.html" target="_blank"> HERE </a>
     <p></p>
     <a href="/a.html"> a </a>
+    <p></p>
+    <a href="/hai.html" target="_self"> Hai :3 </a>
     <p> Have a nice day <3 </p>
   </body>
 </html>
