--- a/a.html
+++ b/a.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1> beans and wheels and chees </h1>
-    <a href="/index.html" target="_self"> beans and wheels and chees </a>
+    <a href="index.html" target="_self"> beans and wheels and chees </a>
   </body>
 </html>
