--- a/hai.html
+++ b/hai.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1> Hai :3 </h1>
-    <a href="./index.html" target="_self"> Return to homepage </a>
+    <a href="index.html" target="_self"> Return to homepage </a>
   </body>
 </html>
