--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <p> WATCH SMUDGE'S ADVENTURES </p>
     <a href="https://lilpetes.github.io/Lil-Petey-s-Films-/index.html" target="_blank"> HERE </a>
     <p></p>
-    <a href="/a.html"> a </a>
+    <a href="a.html"> a </a>
     <p></p>
-    <a href="/hai.html" target="_self"> Hai :3 </a>
+    <a href="hai.html" target="_self"> Hai :3 </a>
     <p> Have a nice day <3 </p>
   </body>
 </html>
