--- a/a.html
+++ b/a.html
@@ -1,6 +1,11 @@
 <html>
   <head>
     <title> beans and wheels and chees </title>
+    <style>
+      body {
+        background-color: orange;
+      }
+    </style>
   </head>
   <body>
     <h1> beans and wheels and chees </h1>
