--- a/index.html
+++ b/index.html
@@ -17,5 +17,15 @@
     <p></p>
     <a href="hai.html" target="_self"> Hai :3 </a>
     <p> Have a nice day <3 </p>
+    <footer>
+      <p>
+        <style>
+          body {
+            text-align: center;
+          }
+        </style>
+        "Luci techs xd ig idk lel, but pls don't copy this xd"
+      </p>
+    </footer>
   </body>
 </html>
