--- a/hai.html
+++ b/hai.html
@@ -1,6 +1,11 @@
 <html>
   <head>
     <title> Hello world! </title>
+    <style>
+      body {
+        background-color: cyan;
+      }
+    </style>
   </head>
   <body>
     <h1> Hai :3 </h1>
