--- a/index.html
+++ b/index.html
@@ -18,14 +18,7 @@
     <a href="hai.html" target="_self"> Hai :3 </a>
     <p> Have a nice day <3 </p>
     <footer>
-      <p>
-        <style>
-          body {
-            text-align: center;
-          }
-        </style>
-        "Luci techs xd ig idk lel, but pls don't copy this xd"
-      </p>
+      <center> Luci techs or smth or whatever idk lel just don't copy pls xd </center>
     </footer>
   </body>
 </html>
