--- a/gh.html
+++ b/gh.html
@@ -17,7 +17,7 @@
     <p></p>
     <a href="hai.html" target="_self"> hai :3 </a>
     <footer>
-      <center> Just mi websites pls don't copy :3 </center>
+      <center> I hope my school doesn't take this down even though it's a project of mine I'm working on </center>
     </footer>
   </body>
 </html>
