--- a/hai.html
+++ b/hai.html
@@ -11,5 +11,7 @@
   <body>
     <h1> Hai :3 </h1>
     <a href="index.html" target="_self"> Return to homepage </a>
+    <p></p>
+    <a href="gh.html" target="_self"> Game homepage :3 </a>
   </body>
 </html>
