--- a/gh.html
+++ b/gh.html
@@ -11,11 +11,12 @@
   <body>
     <h1> Welcome to my game homepage :3 </h1>
     <h2> Here I will put all of my games (on roblox or in html + js) </h2>
-    <p> So far there is no html games 3: </p>
+    <a href="Pacman.html" target="_self"> Pacman :3 </a>
     <p> Roblox game isn't uploaded yet :/ </p>
     <a href="index.html" target="_self"> Return to homepage </a>
     <p></p>
     <a href="hai.html" target="_self"> hai :3 </a>
+    <p></p>
     <footer>
       <center> I hope my school doesn't take this down even though it's a project of mine I'm working on </center>
     </footer>
