--- a/Pacman.html
+++ b/Pacman.html
@@ -10,5 +10,8 @@
     <h2>
       <center> A little game I made at home :3 </center>
     </h2>
+    <footer>
+      <center> aaaaaaaaa :3 </center>
+    </footer>
   </body>
 </html>
