--- a/Pacman.html
+++ b/Pacman.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"?
     <title> Pacman :3 </title>
+    <link rel="stylesheet" href="pacman.css">
   </head>
   <body>
     <h1>
