--- a/Pacman.html
+++ b/Pacman.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"?
     <title> Pacman :3 </title>
     <link rel="stylesheet" href="pacman.css">
+    <script src="pacman.js"></script>
   </head>
   <body>
     <h1>
@@ -12,6 +13,7 @@
     <h2>
       <center> A little game I made at home :3 </center>
     </h2>
+    <canvas id="board"></canvas>
     <footer>
       <center> aaaaaaaaa :3 </center>
     </footer>
