--- a/a.html
+++ b/a.html
@@ -11,5 +11,8 @@
   <body>
     <h1> beans and wheels and chees </h1>
     <a href="index.html" target="_self"> beans and wheels and chees </a>
+    <footer>
+      <h1> beans and wheels and chees </h1>
+    </footer>
   </body>
 </html>
