--- a/a.html
+++ b/a.html
@@ -12,7 +12,7 @@
     <h1> beans and wheels and chees </h1>
     <a href="index.html" target="_self"> beans and wheels and chees </a>
     <footer>
-      <p> beans and wheels and chees </p>
+      <center> beans and wheels and chees </center>
     </footer>
   </body>
 </html>
