--- a/hai.html
+++ b/hai.html
@@ -14,7 +14,7 @@
     <p></p>
     <a href="gh.html" target="_self"> Game homepage :3 </a>
     <footer>
-      <center> This was mad by me, by myself, no help (except for google xd) and made with pure html and is a project I'm making (mostly in school) :3 </center>
+      <center> This was made by me, by myself, no help (except for google xd) and made with pure html and is a project I'm making (mostly in school) :3 </center>
       <center></center>
       <center> Even though this is open-sourced, pls don't copy xd</center>
     </footer>
