--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <a href="hai.html" target="_self"> Hai :3 </a>
     <p></p>
     <a href="gh.html" target="_self"> Game hompage :3 </a>
+    <p></p>
+    <a href=ihyewielbhiejl.html" target="_self"> iqaevbfipodsnvodisv </a>
     <p> Have a nice day <3 </p>
     <footer>
       <center> Luci techs or smth or whatever idk lel just don't copy pls xd </center>
