--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <p> Have a nice day <3 </p>
     <footer>
       <center> Luci techs or smth or whatever idk lel just don't copy pls xd </center>
+      <center> aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa :3 </center>
     </footer>
   </body>
 </html>
