--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         background-color: cyan;
       }
     </style>
+    <style>
+      body {
+        font-family: arial, sans-serif;
+      }
+    </style>
   </head>
   <body>
     <h1> Hello world! </h1>
