--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <a href="gh.html" target="_self"> Game hompage :3 </a>
     <p></p>
     <a href="ihyewielbhiejl.html" target="_self"> iqaevbfipodsnvodisv </a>
+    <p></p>
+    <a href="annahnaanaah.html" target="_self"> annahnaanaah </a>
     <p> Have a nice day <3 </p>
     <footer>
       <center> Luci techs or smth or whatever idk lel just don't copy pls xd </center>
