--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <footer>
       <center> Luci techs or smth or whatever idk lel just don't copy pls xd </center>
       <center> aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa :3 </center>
+      <center> last update: 13/02/2026 (bc of this lol) </center>
     </footer>
   </body>
 </html>
